sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: identifier expected but '=' found.
def bubbleSort(tab: Array[Int]): = {
                                 ^